apps/homelab/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-external
  namespace: homeassistant
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ha-external
  namespace: homeassistant
  labels:
    kubernetes.io/service-name: ha-external
subsets:
  - addresses:
      - ip: 192.168.0.112
    ports:
      - name: http
        port: 8123
        protocol: TCP
